<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    tools:context=".UserInfoPage">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"
        android:layout_weight="1"
        android:contentDescription="@string/image_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        app:cardCornerRadius="150dp"
        app:cardElevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/teal_700"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txtCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cell"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txtPais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txtEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txtCiudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txtDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:text="@string/address"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textStyle="italic" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>